--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
     "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "qs": "^6.7.0",
+    "request": "^2.88.2"
   }
 }
